--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,38 +1,54 @@
 [[constraint]]
   name = "cloud.google.com/go"
-  version = "^0.30.0"
+  version = "0.30.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/gammazero/workerpool"
 
 [[constraint]]
   name = "github.com/golang/protobuf"
-  version = "^1.2.0"
+  version = "1.2.0"
 
 [[constraint]]
-  name = "github.com/hashicorp/errwrap"
-  version = "^1.0.0"
-
-[[constraint]]
-  name = "github.com/hashicorp/vault"
   branch = "master"
+  name = "github.com/hashicorp/errwrap"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/hashicorp/go-hclog"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/hashicorp/go-multierror"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/hashicorp/vault"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/jeffchao/backoff"
 
 [[constraint]]
   name = "github.com/satori/go.uuid"
-  version = "^1.2.0"
+  version = "1.2.0"
 
 [[constraint]]
+  branch = "master"
   name = "golang.org/x/oauth2"
-  branch = "master"
 
 [[constraint]]
+  branch = "master"
   name = "google.golang.org/api"
-  branch = "master"
 
 [[constraint]]
-  name = "google.golang.org/genproto"
   branch = "master"
+  name = "google.golang.org/genproto"
 
 [[constraint]]
   name = "google.golang.org/grpc"
-  version = "^1.14.0"
+  version = "1.15.0"
 
 [prune]
   non-go = true
